# find-my-next-job

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.py  job_checker.py  maintain.sh  pyproject.toml  sources.json
.claude/: settings.json
.cursor/rules/: project.mdc
